# Sysmon-Event-Viewer

./: README.md
tauri-app/: index.html  package-lock.json  package.json  tailwind.config.js
tauri-app/src/: App.tsx  LogViewer.tsx  Sidebar.tsx  output.css  server.cjs
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/src/: main.rs
tauri-app/src/components/: CybersecurityNews.tsx  LogViewer.tsx  Sidebar.tsx
tauri-app/src/uploads2/: test.json
